--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "seed": "bun run prisma/seed.ts"
   },
   "dependencies": {
+    "@bitnoi.se/react-scheduler": "^0.3.1",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
