--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.526.0",
     "next": "15.4.4",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "paynow": "^2.2.2",
     "react": "19.1.0",
