--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "next": "15.4.4",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "node-ical": "^0.22.0",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
